# palingames

./: .dockerignore  .editorconfig-checker.json  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.develop.yml  manage.py  pyproject.toml  ruff.toml
.github/workflows/: ci-cd.yml
apps/access/: admin.py  apps.py  email_outbox.py  emails.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/cart/: apps.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
apps/core/: admin_site.py  alerts.py  analytics.py  analytics_events.py  apps.py  celery_logging.py  consent.py  consent_views.py  context_processors.py  error_views.py  health.py  logging.py  metrics.py  middleware.py  models.py  payment_account_numbers.py  periodic_tasks.py  rate_limit_middleware.py  rate_limits.py  sentry.py  seo.py  tasks.py  tests.py  tests_analytics_events.py  urls.py  views.py  yandex_metrica.py
apps/custom_games/: admin.py  apps.py  emails.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
apps/emails/: admin.py  exceptions.py  models.py  senders.py  suppression.py  tests.py
apps/favorites/: admin.py  apps.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
apps/notifications/: admin.py  alerts.py  destinations.py  formatters.py  handlers.py  models.py  services.py  tasks.py  telegram.py  tests.py  types.py
apps/orders/: admin.py  emails.py  failure_reasons.py  forms.py  guest_merge.py  jobs.py  models.py  purchase_guards.py  reward_services.py  services.py  tasks.py  test_failure_reasons.py  tests.py  tests_admin_manual_order.py  urls.py  views.py
apps/pages/: forms.py  tests.py  urls.py  views.py
apps/payments/: admin.py  alerts.py  emails.py  jobs.py  models.py  notifications.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/products/: admin.py  admin_upload_urls.py  admin_upload_views.py  alerts.py  apps.py  emails.py  forms.py  models.py  pricing.py  review_notifications.py  search.py  signals.py  storage.py  telegram_notify.py  tests.py  upload_intents.py  urls.py  views.py
apps/promocodes/: admin.py  apps.py  models.py  services.py
apps/users/: admin.py  (+13 more)
config/: celery.py  settings.py  settings_test.py  test_runner.py  urls.py
deploy/: Caddyfile  Dockerfile  Dockerfile.bot  README.md  docker-compose.prod.yml  env.example
docs/: analytics-ga4-staging-runbook.md  dashboard-local.md  metrics.md  monitoring-local.md  observability.md  runbooks.md
libs/: __init__.py
tailwind/: custom_game.css  input.css
tests/: test_express_pay_client.py
(+344 files in other folders)
